# m9m

./: .dockerignore  .gitignore  API_COMPATIBILITY.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY_ROADMAP.md  COMPATIBILITY_ROADMAP_UPDATED.md  COMPLETION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  Makefile  QUICK_START.md  README.md  RELEASE_NOTES.md  SCALABILITY_ANALYSIS.md  WEBHOOKS.md  WEBHOOK_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  go.mod  go.sum  install.sh  render.yaml  smoke-test  test-webhook.sh
bindings/python/: README.md  pyproject.toml
bindings/python/tests/: test_basic.py
cgo/: Makefile  callbacks.go  handle.go  m9m.go
config/: config.yaml
deploy/: README.md  fly.toml  kubernetes.yaml  railway.json
docs/: BETA_RELEASE_SUMMARY.md  CONTRIBUTING.md  FRONTEND_COMPATIBILITY.md  IMPLEMENTATION_STATUS.md  N8N_FEATURE_COMPARISON.md  PLUGIN_ARCHITECTURE.md  PLUGIN_SYSTEM.md  README.md  REFRACTOR_PLAN.md  REMAINING_WORK.md  SESSION_SUMMARY.md  TAGS.md  UI_TESTING.md  VARIABLES_AND_ENVIRONMENTS.md  WORKFLOW_VERSIONS.md  compatibility-spec.md  contributing.md  current-status-roadmap.md  design.md  expression-compatibility.md  expression-roadmap.md  expression-system-implementation-plan.md  goja-expression-architecture.md  performance-report.md  project-plan.md  roadmap.md  status-update.md  technical-spec-updated.md  technical-spec.md  todo.md  v0.2.0-COMPLETION-SUMMARY.md  v0.2.0-ROADMAP.md  v0.3.0-ROADMAP.md
documentation/: mkdocs.yml
examples/: README.md
migrations/: 001_initial_schema.sql  002_add_tags.sql  (+1 more)
(+716 files in other folders)
